Bug 192239 - crashes upon selecting view work week
Summary: crashes upon selecting view work week
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.2.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-05-10 16:18 UTC by x.user1372
Modified: 2009-07-16 01:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description x.user1372 2009-05-10 16:18:11 UTC
Version:           4.2.2 (using KDE 4.2.2)
OS:                Linux
Installed from:    Ubuntu Packages

The crash occurred as follows:

I was in the TODO list view.  I selected the button view "Work Week" and korganizer crashed.

I suspect this is because I have the work week disabled. I.e., I deselected all day for work week under
Settings->Configure Korganizer -> Time and Date

Under working hours all days are deselected.
Comment 1 Sergio Martins 2009-05-10 23:17:21 UTC
Do you have a backtrace?
Comment 2 Sergio Martins 2009-05-10 23:23:35 UTC
Was it something like this? I got this one when going to work week view after unchecking all work days.

#0  0xffffe424 in __kernel_vsyscall ()                                                                                                       
#1  0x4812cc31 in *__GI_raise (sig=<value optimized out>) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64                                      
#2  0x4812e418 in *__GI_abort () at abort.c:88                                                                                               
#3  0xb6a865b2 in qt_message_output (msgType=QtFatalMsg,                                                                                     
    buf=0x84323c8 "ASSERT: \"!isEmpty()\" in file /home/kde-devel/qt-copy/include/QtCore/qlist.h, line 255") at global/qglobal.cpp:2006      
#4  0xb6a8662a in qFatal (msg=0xb6bdba14 "ASSERT: \"%s\" in file %s, line %d") at global/qglobal.cpp:2201                                    
#5  0xb6a86aab in qt_assert (assertion=0xb77dfa3f "!isEmpty()", file=0xb77df804 "/home/kde-devel/qt-copy/include/QtCore/qlist.h", line=255)  
    at global/qglobal.cpp:1777                                                                                                               
#6  0xb76dac7a in QList<QDate>::last (this=0x8193a20) at /home/kde-devel/qt-copy/include/QtCore/qlist.h:255                                  
#7  0xb773cee7 in CalendarView::showDates (this=0x8193980, selectedDates=@0x8193a20)                                                         
    at /home/kde-devel/kde/src/KDE/kdepim/korganizer/calendarview.cpp:1804                                                                   
#8  0xb7743774 in CalendarView::qt_metacall (this=0x8193980, _c=QMetaObject::InvokeMetaMethod, _id=202, _a=0xbfa0935c)                       
    at /home/kde-devel/kde/build/KDE/kdepim/korganizer/calendarview.moc:572                                                                  
#9  0xb6b9b364 in QMetaObject::activate (sender=0x8193a18, from_signal_index=4, to_signal_index=4, argv=0xbfa0935c)                          
    at kernel/qobject.cpp:3066                                                                                                               
#10 0xb6b9b7eb in QMetaObject::activate (sender=0x8193a18, m=0xb7820594, local_signal_index=0, argv=0xbfa0935c) at kernel/qobject.cpp:3143   
#11 0xb76d4901 in DateNavigator::datesSelected (this=0x8193a18, _t1=@0x8193a20)                                                              
    at /home/kde-devel/kde/build/KDE/kdepim/korganizer/datenavigator.moc:132                                                                 
#12 0xb76d4928 in DateNavigator::emitSelected (this=0x8193a18) at /home/kde-devel/kde/src/KDE/kdepim/korganizer/datenavigator.cpp:274
Comment 3 x.user1372 2009-05-11 02:19:55 UTC
Yes, I think it is the same, here is what I get

Application: KOrganizer (korganizer), signal SIGABRT

Thread 1 (Thread 0xb50036c0 (LWP 9785)):
[KCrash Handler]
#6  0xb8023430 in __kernel_vsyscall ()
#7  0xb5ec68a0 in raise () from /lib/tls/i686/cmov/libc.so.6
#8  0xb5ec8268 in abort () from /lib/tls/i686/cmov/libc.so.6
#9  0xb616a795 in qt_message_output () from /usr/lib/libQtCore.so.4
#10 0xb616a872 in qFatal () from /usr/lib/libQtCore.so.4
#11 0xb616a915 in qt_assert () from /usr/lib/libQtCore.so.4
#12 0xb7824606 in CalendarView::showDates () from /usr/lib/libkorganizerprivate.so.4
#13 0xb78331fd in CalendarView::qt_metacall () from /usr/lib/libkorganizerprivate.so.4
#14 0xb6277a60 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#15 0xb62787e2 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#16 0xb77be153 in ?? () from /usr/lib/libkorganizerprivate.so.4
#17 0xb77be178 in ?? () from /usr/lib/libkorganizerprivate.so.4
#18 0xb77be5ea in ?? () from /usr/lib/libkorganizerprivate.so.4
#19 0xb7836b34 in ?? () from /usr/lib/libkorganizerprivate.so.4
#20 0xb7836f60 in ?? () from /usr/lib/libkorganizerprivate.so.4
#21 0xb6277a60 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#22 0xb6277e60 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#23 0xb67105f1 in QAction::triggered () from /usr/lib/libQtGui.so.4
#24 0xb6710f5f in QAction::activate () from /usr/lib/libQtGui.so.4
#25 0xb6b36612 in QToolButton::nextCheckState () from /usr/lib/libQtGui.so.4
#26 0xb6a59d53 in ?? () from /usr/lib/libQtGui.so.4
#27 0xb6a5a026 in QAbstractButton::mouseReleaseEvent () from /usr/lib/libQtGui.so.4
#28 0xb6b36b0c in QToolButton::mouseReleaseEvent () from /usr/lib/libQtGui.so.4
#29 0xb676e962 in QWidget::event () from /usr/lib/libQtGui.so.4
#30 0xb6a5803e in QAbstractButton::event () from /usr/lib/libQtGui.so.4
#31 0xb6b365d4 in QToolButton::event () from /usr/lib/libQtGui.so.4
#32 0xb67168ec in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#33 0xb671f0e1 in QApplication::notify () from /usr/lib/libQtGui.so.4
#34 0xb7e3e2ad in KApplication::notify () from /usr/lib/libkdeui.so.5
#35 0xb6262e61 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#36 0xb671e36e in QApplicationPrivate::sendMouseEvent () from /usr/lib/libQtGui.so.4
#37 0xb6788656 in ?? () from /usr/lib/libQtGui.so.4
#38 0xb67879e5 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#39 0xb67b17aa in ?? () from /usr/lib/libQtGui.so.4
#40 0xb5544718 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#41 0xb5547dc3 in ?? () from /usr/lib/libglib-2.0.so.0
#42 0xb5547f81 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#43 0xb628d478 in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#44 0xb67b0ea5 in ?? () from /usr/lib/libQtGui.so.4
#45 0xb626152a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#46 0xb62616ea in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#47 0xb6263da5 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#48 0xb6716767 in QApplication::exec () from /usr/lib/libQtGui.so.4
#49 0x08051184 in _start ()
Comment 4 Sergio Martins 2009-05-17 17:33:43 UTC
SVN commit 969178 by smartins:

Don't try to show work view if the user didn't configure work days, otherwise korg crashes.

Todo: when trunk opens for 4.4 add a message so the user knows there are no work days.

CCBUG: 192239


 M  +7 -3      koviewmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=969178
Comment 5 Sergio Martins 2009-05-17 17:35:32 UTC
It won't crash anymore.
Comment 6 Sergio Martins 2009-05-19 20:57:47 UTC
SVN commit 970211 by smartins:

Backport r969178 by smartins from trunk to the 4.2 branch:

Don't try to show work view if the user didn't configure work days, otherwise korg crashes.

Todo: when trunk opens for 4.4 add a message so the user knows there are no work days.

CCBUG: 192239


 M  +7 -3      koviewmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=970211
Comment 7 Sergio Martins 2009-06-27 19:23:06 UTC
SVN commit 988287 by smartins:

Show a message if a user tries to use work week view without configuring work days.

and:

s/Working Hours/Working Period in the prefs


DO-NOT-BACKPORT

MERGE: e4

BUG: 192239


 M  +1 -1      koprefsdialog.cpp  
 M  +1 -1      koviewmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=988287
Comment 8 Thomas McGuire 2009-07-16 01:02:26 UTC
SVN commit 997533 by tmcguire:

Crossport r988287 by smartins from trunk to the enterprise4 branch:

Show a message if a user tries to use work week view without configuring work days.

and:

s/Working Hours/Working Period in the prefs


DO-NOT-BACKPORT

MERGE: e4

CCBUG: 192239



 M  +1 -1      koprefsdialog.cpp  
 M  +1 -1      koviewmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=997533