Show a message if a user tries to use work week view without configuring work days.

and:

s/Working Hours/Working Period in the prefs


DO-NOT-BACKPORT

MERGE: e4

BUG: 192239

svn path=/trunk/KDE/kdepim/; revision=988287